--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/derek-palmer/twitter-analyst#readme",
   "dependencies": {
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "lokijs": "^1.4.1",
     "nodemon": "^1.11.0"
