--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "lokijs": "^1.4.1",
+    "mdbootstrap": "^4.2.0",
     "nodemon": "^1.11.0",
     "twitter": "^1.7.0"
   }
