--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/derek-palmer/twitter-analyst#readme",
   "dependencies": {
     "dotenv": "^2.0.0",
+    "ejs": "^2.5.5",
     "express": "^4.14.0",
     "lokijs": "^1.4.1",
     "mdbootstrap": "^4.2.0",
